Add scripts for contrast checking, gallery generation, and image processing
- Implement contrast_check.py to analyze color contrast in CSS variables against WCAG 2.1 standards.
- Create generate_gallery.py to scan the Media directory and generate a JSON file describing available images.
- Develop process_images.py to process images, generate thumbnails, convert to WebP format, and update the gallery JSON.

--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
         <section id="home" class="tab-content active">
             <div class="hero-section">
                 <div class="hero-360">
-                    <!-- Kuula 360 Photo Embed for Boise Capital -->
+                    <!-- Featured YouTube Video Embed -->
                     <iframe width="100%" height="640" style="width: 100%; height: 100%; border: none; max-width: 100%;" 
-                            allow="xr-spatial-tracking; gyroscope; accelerometer" 
-                            allowfullscreen scrolling="no" 
-                            src="https://kuula.co/share/collection/7kJnF?logo=1&info=1&fs=1&vr=0&sd=1&thumbs=1">
+                            src="https://www.youtube.com/embed/ERdTZ5Tfw8U?autoplay=1&mute=1&loop=1&playlist=ERdTZ5Tfw8U&rel=0" 
+                            title="The Village at Meridian, Julius M. Kleiner Memorial Park" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
                     </iframe>
                     <div class="hero-text">
-                        <h1>Boise, ID</h1>
-                        <p>Aerial Photography & Videography</p>
+                        <h1>The Village at Meridian</h1>
+                        <p>Julius M. Kleiner Memorial Park</p>
                     </div>
                 </div>
             </div>
@@ -45,12 +46,27 @@
                 <div class="featured-grid">
                     <div class="featured-item">
                         <div class="featured-image">
-                            <iframe width="100%" height="400" style="border: none;" 
-                                    src="https://kuula.co/share/collection/7kJnF?logo=1&info=0&fs=1&vr=0&sd=1&thumbs=1">
+                            <iframe width="100%" height="100%" style="border: none;" 
+                                    src="https://www.youtube.com/embed/ERdTZ5Tfw8U?rel=0" 
+                                    title="The Village at Meridian, Julius M. Kleiner Memorial Park" 
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                                    allowfullscreen>
                             </iframe>
                         </div>
-                        <h3>Idaho State Capitol</h3>
-                        <p>360° Virtual Tour</p>
+                        <h3>The Village at Meridian, Julius M. Kleiner Memorial Park</h3>
+                        <p>Signature aerial overview of The Village and Julius M. Kleiner Memorial Park</p>
+                    </div>
+                    <div class="featured-item">
+                        <div class="featured-image video-frame">
+                            <iframe width="100%" height="100%" 
+                                    src="https://www.youtube.com/embed/ERdTZ5Tfw8U?rel=0" 
+                                    title="The Village at Meridian, Julius M. Kleiner Memorial Park" 
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                                    allowfullscreen>
+                            </iframe>
+                        </div>
+                        <h3>The Village at Meridian, Julius M. Kleiner Memorial Park</h3>
+                        <p>Signature aerial overview of The Village and Julius M. Kleiner Memorial Park</p>
                     </div>
                     <div class="featured-item">
                         <div class="featured-image placeholder">
@@ -58,13 +74,6 @@
                         </div>
                         <h3>Downtown Boise</h3>
                         <p>3D Reconstruction</p>
-                    </div>
-                    <div class="featured-item">
-                        <div class="featured-image placeholder">
-                            <span>Video Preview</span>
-                        </div>
-                        <h3>Boise River Greenbelt</h3>
-                        <p>Aerial Cinematic</p>
                     </div>
                 </div>
             </div>
@@ -140,19 +149,19 @@
             </div>
             <div class="tours-grid">
                 <div class="tour-item">
-                    <h3>Idaho State Capitol Tour</h3>
+                    <h3>Boise State Tour</h3>
                     <iframe width="100%" height="480" style="border: none;" 
-                            allow="xr-spatial-tracking; gyroscope; accelerometer" 
-                            allowfullscreen scrolling="no" 
-                            src="https://kuula.co/share/collection/7kJnF?logo=1&info=1&fs=1&vr=0&sd=1&thumbs=1">
+                            allow="autoplay; fullscreen; xr-spatial-tracking; gyroscope; accelerometer" 
+                            allowfullscreen webkitallowfullscreen mozallowfullscreen scrolling="no" 
+                            src="https://kuula.co/share/collection/7Hh8t?logo=1&info=1&fs=1&vr=0&thumbs=1">
                     </iframe>
-                    <p>Complete 360° tour of the Idaho State Capitol building and grounds</p>
+                    <p>Complete 360° aerial tour showcasing the Boise State experience</p>
                 </div>
                 <div class="tour-item">
                     <h3>Downtown Boise</h3>
                     <iframe width="100%" height="480" style="border: none;" 
-                            allow="xr-spatial-tracking; gyroscope; accelerometer" 
-                            allowfullscreen scrolling="no" 
+                            allow="autoplay; fullscreen; xr-spatial-tracking; gyroscope; accelerometer" 
+                            allowfullscreen webkitallowfullscreen mozallowfullscreen scrolling="no" 
                             src="https://kuula.co/share/collection/7kJnF?logo=1&info=0&fs=1&vr=0&sd=1&thumbs=1">
                     </iframe>
                     <p>Aerial views of vibrant downtown Boise</p>
@@ -160,8 +169,8 @@
                 <div class="tour-item">
                     <h3>Boise Foothills</h3>
                     <iframe width="100%" height="480" style="border: none;" 
-                            allow="xr-spatial-tracking; gyroscope; accelerometer" 
-                            allowfullscreen scrolling="no" 
+                            allow="autoplay; fullscreen; xr-spatial-tracking; gyroscope; accelerometer" 
+                            allowfullscreen webkitallowfullscreen mozallowfullscreen scrolling="no" 
                             src="https://kuula.co/share/collection/7kJnF?logo=1&info=0&fs=1&vr=0&sd=1&thumbs=1">
                     </iframe>
                     <p>Panoramic views of the beautiful Boise foothills</p>
@@ -177,15 +186,16 @@
             </div>
             <div class="videos-grid">
                 <div class="video-item">
-                    <h3>Boise Cinematic Reel</h3>
-                    <div class="video-placeholder">
-                        <p>Embed your video here (YouTube, Vimeo, etc.)</p>
-                        <!-- Example YouTube embed: -->
-                        <!-- <iframe width="100%" height="400" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" 
-                             frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                             allowfullscreen></iframe> -->
+                    <h3>The Village at Meridian, Julius M. Kleiner Memorial Park</h3>
+                    <div class="video-wrapper">
+                        <iframe width="100%" height="100%" style="border: none;" 
+                                src="https://www.youtube.com/embed/ERdTZ5Tfw8U?rel=0" 
+                                title="The Village at Meridian, Julius M. Kleiner Memorial Park" 
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                                allowfullscreen>
+                        </iframe>
                     </div>
-                    <p>A cinematic showcase of Boise's most iconic locations</p>
+                    <p>Featured aerial walkthrough of The Village at Meridian and Julius M. Kleiner Memorial Park</p>
                 </div>
                 <div class="video-item">
                     <h3>Sunrise Over Boise</h3>
