fix: use tracked preview clips for videos

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                     <div class="featured-item">
                         <div class="featured-image video-embed">
-                            <div class="video-thumb" tabindex="0" role="button" aria-label="Play The Village video" data-play-src="Media/the-village/village-video.mp4" data-preview-src="Media/previews/village-video-preview.mp4" data-poster="data/images/the-village/thumb-Village-1-800.jpg">
+                            <div class="video-thumb" tabindex="0" role="button" aria-label="Play The Village video" data-play-src="Media/previews/village-video-preview.mp4" data-preview-src="Media/previews/village-video-preview.mp4" data-poster="data/images/the-village/thumb-Village-1-800.jpg">
                                 <img class="video-thumb__img" src="data/images/the-village/thumb-Village-1-800.jpg" alt="The Village video thumbnail" loading="lazy">
                                 <button class="thumb-play" aria-hidden="true">▶</button>
                             </div>
@@ -307,7 +307,7 @@
                 <div class="cards-grid">
                     <article class="card">
                         <div class="card-media">
-                            <div class="video-thumb" tabindex="0" role="button" aria-label="Play The Village video" data-play-src="Media/the-village/village-video.mp4" data-preview-src="Media/previews/village-video-preview.mp4" data-poster="data/images/the-village/thumb-Village-1.jpg">
+                            <div class="video-thumb" tabindex="0" role="button" aria-label="Play The Village video" data-play-src="Media/previews/village-video-preview.mp4" data-preview-src="Media/previews/village-video-preview.mp4" data-poster="data/images/the-village/thumb-Village-1.jpg">
                                 <img class="video-thumb__img" src="data/images/the-village/thumb-Village-1.jpg" alt="The Village video thumbnail" loading="lazy">
                                 <button class="thumb-play" aria-hidden="true">▶</button>
                             </div>
@@ -316,14 +316,14 @@
                             <div class="card-title">The Village at Meridian, Julius M. Kleiner Memorial Park</div>
                             <div class="card-meta">Aerial video • Meridian, ID</div>
                             <div class="card-actions">
-                                <button class="btn" data-play-src="Media/the-village/village-video.mp4" data-poster="data/images/the-village/thumb-Village-1.jpg">Play</button>
+                                <button class="btn" data-play-src="Media/previews/village-video-preview.mp4" data-poster="data/images/the-village/thumb-Village-1.jpg">Play</button>
                             </div>
                         </div>
                     </article>
 
                     <article class="card">
                         <div class="card-media">
-                            <div class="video-thumb" tabindex="0" role="button" aria-label="Play Table-Rock Flyover" data-play-src="Media/Table-Rock/Table-Rock-Flyover.mp4" data-preview-src="Media/previews/Table-Rock-Flyover-preview.mp4" data-poster="data/images/Table-Rock/thumb-poster-Table-Rock-Flyover-800.jpg">
+                            <div class="video-thumb" tabindex="0" role="button" aria-label="Play Table-Rock Flyover" data-play-src="Media/previews/Table-Rock-Flyover-preview.mp4" data-preview-src="Media/previews/Table-Rock-Flyover-preview.mp4" data-poster="data/images/Table-Rock/thumb-poster-Table-Rock-Flyover-800.jpg">
                                 <img class="video-thumb__img" src="data/images/Table-Rock/thumb-poster-Table-Rock-Flyover-800.jpg" alt="Table-Rock Flyover thumbnail" loading="lazy">
                                 <button class="thumb-play" aria-hidden="true">▶</button>
                             </div>
@@ -332,14 +332,14 @@
                             <div class="card-title">Table-Rock Flyover</div>
                             <div class="card-meta">Smooth aerial flyover showcasing Table-Rock's plateau and surrounding foothills</div>
                             <div class="card-actions">
-                                <button class="btn" data-play-src="Media/Table-Rock/Table-Rock-Flyover.mp4" data-poster="data/images/Table-Rock/thumb-poster-Table-Rock-Flyover-800.jpg">Play</button>
+                                <button class="btn" data-play-src="Media/previews/Table-Rock-Flyover-preview.mp4" data-poster="data/images/Table-Rock/thumb-poster-Table-Rock-Flyover-800.jpg">Play</button>
                             </div>
                         </div>
                     </article>
 
                     <article class="card">
                         <div class="card-media">
-                            <div class="video-thumb" tabindex="0" role="button" aria-label="Play CraneUp Table-Rock" data-play-src="Media/Table-Rock/CraneUp-Table-Rock.mp4" data-preview-src="Media/previews/CraneUp-Table-Rock-preview.mp4" data-poster="data/images/Table-Rock/thumb-poster-CraneUp-Table-Rock-800.jpg">
+                            <div class="video-thumb" tabindex="0" role="button" aria-label="Play CraneUp Table-Rock" data-play-src="Media/previews/CraneUp-Table-Rock-preview.mp4" data-preview-src="Media/previews/CraneUp-Table-Rock-preview.mp4" data-poster="data/images/Table-Rock/thumb-poster-CraneUp-Table-Rock-800.jpg">
                                 <img class="video-thumb__img" src="data/images/Table-Rock/thumb-poster-CraneUp-Table-Rock-800.jpg" alt="CraneUp Table-Rock thumbnail" loading="lazy">
                                 <button class="thumb-play" aria-hidden="true">▶</button>
                             </div>
@@ -348,7 +348,7 @@
                             <div class="card-title">CraneUp — Table-Rock</div>
                             <div class="card-meta">Low-altitude crane perspective highlighting the vertical relief and rock faces</div>
                             <div class="card-actions">
-                                <button class="btn" data-play-src="Media/Table-Rock/CraneUp-Table-Rock.mp4" data-poster="data/images/Table-Rock/thumb-poster-CraneUp-Table-Rock-800.jpg">Play</button>
+                                <button class="btn" data-play-src="Media/previews/CraneUp-Table-Rock-preview.mp4" data-poster="data/images/Table-Rock/thumb-poster-CraneUp-Table-Rock-800.jpg">Play</button>
                             </div>
                         </div>
                     </article>
@@ -357,7 +357,7 @@
                 <div class="cards-grid" style="margin-top: 2rem;">
                     <article class="card">
                         <div class="card-media">
-                            <div class="video-thumb" tabindex="0" role="button" aria-label="Play Boise Capitol Video 1" data-play-src="Media/Boise%20Capitol/Videos/Capitol-1.mp4" data-preview-src="Media/previews/Capitol-1-preview.mp4" data-poster="Media/Boise%20Capitol/Photos/dji_fly_20251204_151358_0006_1764890606454_pano.jpg">
+                            <div class="video-thumb" tabindex="0" role="button" aria-label="Play Boise Capitol Video 1" data-play-src="Media/previews/Capitol-1-preview.mp4" data-preview-src="Media/previews/Capitol-1-preview.mp4" data-poster="Media/Boise%20Capitol/Photos/dji_fly_20251204_151358_0006_1764890606454_pano.jpg">
                                 <img class="video-thumb__img" src="Media/Boise%20Capitol/Photos/dji_fly_20251204_151358_0006_1764890606454_pano.jpg" alt="Boise Capitol video 1 thumbnail" loading="lazy">
                                 <button class="thumb-play" aria-hidden="true">▶</button>
                             </div>
@@ -366,14 +366,14 @@
                             <div class="card-title">Boise Capitol — Flight 1</div>
                             <div class="card-meta">Aerial pass over the Capitol dome</div>
                             <div class="card-actions">
-                                <button class="btn" data-play-src="Media/Boise%20Capitol/Videos/Capitol-1.mp4" data-poster="Media/Boise%20Capitol/Photos/dji_fly_20251204_151358_0006_1764890606454_pano.jpg">Play</button>
+                                <button class="btn" data-play-src="Media/previews/Capitol-1-preview.mp4" data-poster="Media/Boise%20Capitol/Photos/dji_fly_20251204_151358_0006_1764890606454_pano.jpg">Play</button>
                             </div>
                         </div>
                     </article>
 
                     <article class="card">
                         <div class="card-media">
-                            <div class="video-thumb" tabindex="0" role="button" aria-label="Play Boise Capitol Video 2" data-play-src="Media/Boise%20Capitol/Videos/Capitol-2.mp4" data-preview-src="Media/previews/Capitol-2-preview.mp4" data-poster="Media/Boise%20Capitol/Photos/dji_fly_20251204_151402_0007_1764890617273_photo.jpg">
+                            <div class="video-thumb" tabindex="0" role="button" aria-label="Play Boise Capitol Video 2" data-play-src="Media/previews/Capitol-2-preview.mp4" data-preview-src="Media/previews/Capitol-2-preview.mp4" data-poster="Media/Boise%20Capitol/Photos/dji_fly_20251204_151402_0007_1764890617273_photo.jpg">
                                 <img class="video-thumb__img" src="Media/Boise%20Capitol/Photos/dji_fly_20251204_151402_0007_1764890617273_photo.jpg" alt="Boise Capitol video 2 thumbnail" loading="lazy">
                                 <button class="thumb-play" aria-hidden="true">▶</button>
                             </div>
@@ -382,14 +382,14 @@
                             <div class="card-title">Boise Capitol — Flight 2</div>
                             <div class="card-meta">Orbit showcasing grounds and facade</div>
                             <div class="card-actions">
-                                <button class="btn" data-play-src="Media/Boise%20Capitol/Videos/Capitol-2.mp4" data-poster="Media/Boise%20Capitol/Photos/dji_fly_20251204_151402_0007_1764890617273_photo.jpg">Play</button>
+                                <button class="btn" data-play-src="Media/previews/Capitol-2-preview.mp4" data-poster="Media/Boise%20Capitol/Photos/dji_fly_20251204_151402_0007_1764890617273_photo.jpg">Play</button>
                             </div>
                         </div>
                     </article>
 
                     <article class="card">
                         <div class="card-media">
-                            <div class="video-thumb" tabindex="0" role="button" aria-label="Play Boise Capitol Video 3" data-play-src="Media/Boise%20Capitol/Videos/Capitol-3.mp4" data-preview-src="Media/previews/Capitol-3-preview.mp4" data-poster="Media/Boise%20Capitol/Photos/dji_fly_20251204_151432_0009_1764890604891_photo.jpg">
+                            <div class="video-thumb" tabindex="0" role="button" aria-label="Play Boise Capitol Video 3" data-play-src="Media/previews/Capitol-3-preview.mp4" data-preview-src="Media/previews/Capitol-3-preview.mp4" data-poster="Media/Boise%20Capitol/Photos/dji_fly_20251204_151432_0009_1764890604891_photo.jpg">
                                 <img class="video-thumb__img" src="Media/Boise%20Capitol/Photos/dji_fly_20251204_151432_0009_1764890604891_photo.jpg" alt="Boise Capitol video 3 thumbnail" loading="lazy">
                                 <button class="thumb-play" aria-hidden="true">▶</button>
                             </div>
@@ -398,7 +398,7 @@
                             <div class="card-title">Boise Capitol — Flight 3</div>
                             <div class="card-meta">Low sweep along the east approach</div>
                             <div class="card-actions">
-                                <button class="btn" data-play-src="Media/Boise%20Capitol/Videos/Capitol-3.mp4" data-poster="Media/Boise%20Capitol/Photos/dji_fly_20251204_151432_0009_1764890604891_photo.jpg">Play</button>
+                                <button class="btn" data-play-src="Media/previews/Capitol-3-preview.mp4" data-poster="Media/Boise%20Capitol/Photos/dji_fly_20251204_151432_0009_1764890604891_photo.jpg">Play</button>
                             </div>
                         </div>
                     </article>
