Add Boise Capitol panorama asset

--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
 
                         <article class="card" data-type="boise-capitol">
                             <div class="card-media">
-                                <img src="Media/Boise Capitol/Photos/dji_fly_20251204_151358_0006_1764890606454_pano.jpg" alt="Boise Capitol panorama aerial" loading="lazy" tabindex="0" data-full="Media/Boise Capitol/Photos/dji_fly_20251204_151358_0006_1764890606454_pano.jpg">
+                                <img src="Media/Boise%20Capitol/Photos/dji_fly_20251204_151358_0006_1764890606454_pano.jpg" alt="Boise Capitol panorama aerial" loading="lazy" tabindex="0" data-full="Media/Boise%20Capitol/Photos/dji_fly_20251204_151358_0006_1764890606454_pano.jpg">
                             </div>
                             <div class="card-body">
                                 <div class="card-title">Boise Capitol — Panorama</div>
                                 <div class="card-meta">Boise, ID • Aerial panorama</div>
                                 <div class="card-actions">
-                                    <button class="btn" data-open-photo="Media/Boise Capitol/Photos/dji_fly_20251204_151358_0006_1764890606454_pano.jpg">View</button>
+                                    <button class="btn" data-open-photo="Media/Boise%20Capitol/Photos/dji_fly_20251204_151358_0006_1764890606454_pano.jpg">View</button>
                                 </div>
                             </div>
                         </article>
