Update Kiri embed for Boise Capitol

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
                     <article class="card">
                         <div class="card-media">
-                            <iframe title="Boise Capitol Scan 2" src="https://www.kiriengine.app/share/3dgsEmbed/1996781668374937600?userId=1537123&type=0&bg_theme=dark&auto_spin=1" frameborder="0" allowfullscreen mozallowfullscreen webkitallowfullscreen allow="autoplay; fullscreen; xr-spatial-tracking" execution-while-out-of-viewport execution-while-not-rendered style="max-width:100%;max-height:100%;min-width:100%;min-height:100%;border:0;" aria-label="Boise Capitol Scan 2"></iframe>
+                            <iframe title="Boise Capitol Scan 2" src="https://www.kiriengine.app/share/3dgsEmbed/1996781668374937600?userId=1537123&type=0&bg_theme=bright&auto_spin=1" frameborder="0" allowfullscreen mozallowfullscreen webkitallowfullscreen allow="autoplay; fullscreen;" execution-while-out-of-viewport execution-while-not-rendered style="max-width:100%;max-height:100%;min-width:100%;min-height:100%;" aria-label="Boise Capitol Scan 2"></iframe>
                         </div>
                         <div class="card-body">
                             <div class="card-title">Boise Capitol — Kiri Scan</div>
