Make 3D model buttons open embeds

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                             <div class="card-title">Boise Capitol — Luma Scan</div>
                             <div class="card-meta">High-detail reconstruction via Luma</div>
                             <div class="card-actions">
-                                <button class="btn" aria-haspopup="dialog">Open Model</button>
+                                <a class="btn" href="https://lumalabs.ai/embed/795a717a-b3d5-4139-a1b0-81a00bbae42e?mode=sparkles&background=%23ffffff&color=%23000000&showTitle=true&loadBg=true&logoPosition=bottom-left&infoPosition=bottom-right&cinematicVideo=undefined&showMenu=true" target="_blank" rel="noopener" aria-label="Open Boise Capitol Luma model">Open Model</a>
                             </div>
                         </div>
                     </article>
@@ -242,7 +242,7 @@
                             <div class="card-title">Boise Capitol — Kiri Scan</div>
                             <div class="card-meta">Photogrammetry via Kiri Engine</div>
                             <div class="card-actions">
-                                <button class="btn" aria-haspopup="dialog">Open Model</button>
+                                <a class="btn" href="https://www.kiriengine.app/share/3dgsEmbed/1996781668374937600?userId=1537123&type=0&bg_theme=bright&auto_spin=1" target="_blank" rel="noopener" aria-label="Open Boise Capitol Kiri model">Open Model</a>
                             </div>
                         </div>
                     </article>
