Fix mobile scroll trap on hero 360 embed

--- a/index.html
+++ b/index.html
@@ -52,11 +52,15 @@
                             width="100%"
                             height="640"
                             frameborder="0"
-                            allow="autoplay; fullscreen; accelerometer; gyroscope; xr-spatial-tracking"
+                            allow="autoplay; fullscreen"
                             allowfullscreen
                             loading="lazy"
                             aria-label="Boise 360 panorama">
                         </iframe>
+                        <!-- Mobile: allow scrolling past the embed; tap to enable interaction -->
+                        <div class="embed-guard" data-embed-guard aria-hidden="true">
+                            <button class="btn secondary embed-guard__btn" type="button">Tap to interact</button>
+                        </div>
                     <div class="hero-text">
                         <h1>Boise, ID</h1>
                         <p>Your local professional for Aerial Photography & Videography</p>
@@ -76,7 +80,7 @@
                                 width="100%"
                                 height="400"
                                 frameborder="0"
-                                allow="autoplay; fullscreen; accelerometer; gyroscope; xr-spatial-tracking"
+                                allow="autoplay; fullscreen"
                                 allowfullscreen
                                 loading="lazy"
                                 aria-label="Boise State 360 tour">
@@ -280,7 +284,7 @@
                 <div class="cards-grid">
                     <article class="card">
                         <div class="card-media">
-                            <iframe title="Capitol Building" src="https://kuula.co/share/collection/7HbnG?logo=1&info=1&fs=1&autoplay=1" loading="lazy" aria-label="Capitol Building 360 tour" allow="autoplay; fullscreen; encrypted-media; gyroscope; accelerometer; xr-spatial-tracking" allowfullscreen></iframe>
+                            <iframe title="Capitol Building" src="https://kuula.co/share/collection/7HbnG?logo=1&info=1&fs=1&autoplay=1" loading="lazy" aria-label="Capitol Building 360 tour" allow="autoplay; fullscreen" allowfullscreen></iframe>
                         </div>
                         <div class="card-body">
                             <div class="card-title">Capitol Building — 360° Tour</div>
@@ -291,7 +295,7 @@
 
                     <article class="card">
                         <div class="card-media">
-                            <iframe title="Boise State Virtual Tour" src="https://kuula.co/share/collection/7Hh8t?logo=1&info=1&fs=1&autoplay=1" loading="lazy" aria-label="Boise State 360 tour" allow="autoplay; fullscreen; encrypted-media; gyroscope; accelerometer; xr-spatial-tracking" allowfullscreen></iframe>
+                            <iframe title="Boise State Virtual Tour" src="https://kuula.co/share/collection/7Hh8t?logo=1&info=1&fs=1&autoplay=1" loading="lazy" aria-label="Boise State 360 tour" allow="autoplay; fullscreen" allowfullscreen></iframe>
                         </div>
                         <div class="card-body">
                             <div class="card-title">Boise State University — 360° Tour</div>
